--- a/src/main/resources/templates/infoClientForm.html
+++ b/src/main/resources/templates/infoClientForm.html
@@ -6,20 +6,77 @@
     <title>Info Client Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+            /* Estilos opcionales para mejorar la apariencia del dropdown */
+            body {
+                font-family: Arial, sans-serif;
+                margin: 20px;
+            }
+    
+            select {
+                padding: 8px;
+                font-size: 16px;
+            }
+            .fondo-rgb {
+                background-color: rgba(106, 4, 82, 0.336); /* Rojo puro (255, 0, 0) */
+                border-radius: 10px;
+            }
+            .bradius{
+                border-radius: 10px;
+            }
+            .bground-general{
+                background-color: rgba(18, 194, 243, 0.255);
+                border-radius: 10px;
+            }
+    </style>
 </head>
 <body>
-    <div class="container rgba(var(--bs-secondary-bg-rgb), .5)">
-        <h3> Info Cliente </h3>
-        <hr>
-        <p class="h4 mb-4">Client</p>
+    <div class="container bground-general">
+        <div class="container rgba(var(--bs-secondary-bg-rgb), .5)">
+            <div class="row"></div>
+            <div class="row text-center mt-2">
+                <div class="col-8 bg-success-subtle border border-warning-subtle rounded-3">
+                    <h2 class="mt-3">Info Cliente</h2>
+                </div>
+                <div class="col-4">
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-auto mt-3">
+                            <span class="input-group-text" id="basic-addon1" width="50px">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"></path>
+                                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"></path>
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="col-md-auto justify-content-start mt-3">
+                            <span sec:authentication="principal.username"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <p class="h4 mb-4">Client</p>
+    
+            <form action="#" th:action="@{/save}" th:object="${infoCliente}" method="post">
+                <input type="hidden" th:field="*{id}">
+                <p>Nombre</p>
+                <input class="form-control mb-4 w-25" type="text" th:field="*{firstName}" placeholder="First Name" disabled>
+                <p>Apellido</p>
+                <input class="form-control mb-4 w-25" type="text" th:field="*{secondName}" placeholder="Second Name" disabled>
+                <p>Correo</p>
+                <input class="form-control mb-4 w-25" type="text" th:field="*{email}" placeholder="Email" disabled>
+            </form>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <a class="btn btn-warning col-2 mb-3" th:href="@{/leaderList}">Back</a>
+                    </div>
+                </div>
+            </div>
 
-        <form action="#" th:action="@{/save}" th:object="${infoCliente}" method="post">
-            <input type="hidden" th:field="*{id}">
-            <input class="form-control mb-4 w-25" type="text" th:field="*{firstName}" placeholder="First Name" disabled>
-            <input class="form-control mb-4 w-25" type="text" th:field="*{secondName}" placeholder="Second Name" disabled>
-            <input class="form-control mb-4 w-25" type="text" th:field="*{email}" placeholder="Email" disabled>
-        </form>
-        <a class="btn btn-warning col-2 mt-4" th:href="@{/leaderList}">Back</a>
+            <div class="row"></div>
+        </div>
     </div>
+    
 </body>
 </html>
