--- a/src/main/resources/templates/leadersPage.html
+++ b/src/main/resources/templates/leadersPage.html
@@ -27,7 +27,6 @@
             border-radius: 10px;
         }
     </style>
-    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -118,10 +117,18 @@
             </div>
             <hr>
             
-            <div class="mb-3">
-                <form action="#" th:action="@{/logout}" method="POST">
-                    <input class="fondo-rgb" type="submit" value="logout">
-                </form>
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col-auto">
+                        <div class="mb-3">
+                            <form action="#" th:action="@{/logout}" method="POST">
+                                <input class="fondo-rgb" type="submit" value="logout">
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row"></div>
         </div>
